# peppa

./: README.md
algorithms/object_detection/: CMakeLists.txt  common.hpp  main.cpp
algorithms/object_tracking/: CMakeLists.txt  goturn.prototxt  main.cpp
catkin_ws/src/camera_node/: CMakeLists.txt  package.xml
catkin_ws/src/camera_node/src/: camera_node.cpp  manifest.cpp
catkin_ws/src/darknet_ros-1.1.5/: .gitmodules  README.md
catkin_ws/src/darknet_ros-1.1.5/.github/workflows/: catkin-build.yml
catkin_ws/src/darknet_ros-1.1.5/darknet/: README.md
catkin_ws/src/darknet_ros-1.1.5/darknet/src/: image_opencv.cpp
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/config/: ros.yaml
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp  image_interface.hpp
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/launch/: darknet_ros.launch  darknet_ros_nodelet.launch
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/src/: YoloObjectDetector.cpp  image_interface.cpp  yolo_object_detector_node.cpp  yolo_object_detector_nodelet.cpp
catkin_ws/src/darknet_ros-1.1.5/darknet_ros/test/: ObjectDetection.cpp
catkin_ws/src/darknet_ros-1.1.5/darknet_ros_msgs/: CHANGELOG.rst
catkin_ws/src/object_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/object_tracking/include/object_tracking/: object_tracking.hpp
catkin_ws/src/object_tracking/src/: object_tracking.cpp  object_tracking_node.cpp
