cmake_minimum_required(VERSION 3.10.0)
project(object_detection VERSION 0.1.0)

include(CTest)
enable_testing()
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
if((TARGET Threads::Threads OR HAVE_THREADS) AND NOT OPENCV_EXAMPLES_DISABLE_THREADS)
  add_definitions(-DHAVE_THREADS=1)
endif()
find_package(OpenCV REQUIRED PATHS "~/my_lib/build")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(object_detection main.cpp)
target_link_libraries(object_detection ${OpenCV_LIBS} Threads::Threads)
#target_link_libraries(object_detection PRIVATE )
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
